2005-09-24  Kalpit Desai <kvdesai@cs.unc.edu>
	* processpeak.m: Made interactive. 

2005-09-13  Kalpit Desai <kvdesai@cs.unc.edu>
	* mypsd.m: 
	- Made to exit gracefully and report some plain english errors when input parameters are inconsistent. 
	- Fixed some comments.
2005-09-08  Kalpit Desai <kvdesai@cs.unc.edu>
	* mypsd.m: Added couple of more options for window types and handled when the supplied window type is unacceptable.
2005-06-27  Jeremy Cribb <jcribb@email.unc.edu>
	* vrpn_psd.m:  fixed several syntactial errors so that vrpn_psd actually works now.
	* mypsd.m: fixed typo in documentation.

2005-01-19  Kalpit Desai <kvdesai@cs.unc.edu>
	* added processpeak.m : Takes two vectors [p,f] that are output of psd calculatios, and converts the power at particular frquency (fsearch) in to units of amplitude of sinewave at that particular frequency. A handy utility for interpreting psd data.

2005-01-10  Kalpit Desai <kvdesai@cs.unc.edu>
	* mypsd.m : fixed a typo in calculation of cumulative displacement
2004-06-11  Kalpit Desai <kvdesai@cs.unc.edu>
	* mypsd.m : renamed 'window' variable to 'win' and 'windowtype' to 'window_type'.	

2004-05-18  Jeremy Cribb <jcribb@email.unc.edu>

	* Initial Version
